--- a/components/menu/style/index.less
+++ b/components/menu/style/index.less
@@ -268,13 +268,13 @@
       position: relative;
       top: 1px;
       float: left;
-      border-bottom: 2px solid transparent;
+      border-bottom: @menu-highlight-border-bottom-width solid transparent;
 
       &:hover,
       &-active,
       &-open,
       &-selected {
-        border-bottom: 2px solid @menu-highlight-color;
+        border-bottom: @menu-highlight-border-bottom-width solid @menu-highlight-color;
         color: @menu-highlight-color;
       }
 
@@ -285,7 +285,7 @@
           color: @menu-highlight-color;
         }
         &:before {
-          bottom: -2px;
+          bottom: -@menu-highlight-border-bottom-width;
         }
       }
     }
@@ -310,7 +310,7 @@
         right: 0;
         top: 0;
         bottom: 0;
-        border-right: 3px solid @menu-highlight-color;
+        border-right: (@menu-highlight-border-bottom-width + 1px) solid @menu-highlight-color;
         transform: scaleY(.0001);
         opacity: 0;
         transition: transform .15s @ease-out, opacity .15s @ease-out;
