--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -314,6 +314,7 @@
 @menu-bg: @component-background;
 @menu-item-color: @text-color;
 @menu-highlight-color: @primary-color;
+@menu-highlight-border-bottom-width: 2px;
 @menu-item-active-bg: @item-active-bg;
 @menu-item-group-title-color: @text-color-secondary;
 // dark theme
